# transactify

./: .dockerignore  .gitignore  README.md  Sales.py  docker-compose.tests.yaml  docker-compose.yaml  entrypoint_template.sh  main.py  neopixel_test.py  pyproject.toml  requirements.txt  snack_store.db  wifi_rebooter.sh
cashlessui/: .my_pgpass  Dockerfile  convert_svg_png.py  docker-compose.yaml  download_bootstrap_icons.py  entrypoint.sh  make_migrations.sh  make_store_db_migration.sh  make_user_db_migration.sh  manage.py  requirements.txt
cashlessui/cashlessui/: asgi.py  models.py  settings.py  urls.py  views.py
cashlessui/nginx/: nginx.conf
cashlessui/store/: HardwareController.py  ScannerComsumer.py  admin.py  apps.py  models.py  urls.py  views.py
common/nginx/: nginx.conf  nginx.sh
common/scripts/: change_nginx.py  change_nginx.sh  convert_svg_png.py  db_migration.sh  functions.sh  (+2 more)
controller/: KeyPad.py  MainController.py
host_scripts/: configure_watchdog.sh  enable_watchdog.sh
nginx/: nginx.conf  nginx.donknabberello.conf  nginx.terminal.conf  nginx_tests.conf
old/: main.py
scripts/: db_migration.sh
server/: TCPServer.py
tools_and_tests/: download_static.py  pn532.py  test_st7.py  testing_pinouts.py
transactify_service/: Dockerfile  entrypoint.sh  entrypoint.tests.sh  journal_donknabberello.py  make_store_db_migration.sh  make_user_db_migration.sh  manage.py  run_on_host.sh  run_on_host_tests.sh
transactify_terminal/: Dockerfile  entrypoint.sh  entrypoint.tests.sh  make_terminal_db_migration.sh  manage.py  run_on_host.sh  terminal.conf
(+416 files in other folders)
